# printf

ft_printf/: CMakeLists.txt  Makefile  a.out  ft_atoi.c  ft_print_int.c  ft_print_str.c  ft_printf.c  ft_strchr.c  ft_strjoin.c  ft_strlen.c  ft_substr.c  printf.h  printf.h.gch
ft_printf/a.out.dSYM/Contents/Resources/DWARF/: a.out
ft_printf_last_version/: CMakeLists.txt  ft_atoi.c  ft_check_weight.c  ft_itoa.c  ft_itoa_base_mod.c  ft_obrab.c  ft_print_char.c  ft_print_hex.c  ft_print_int.c  ft_print_p.c  ft_print_proc.c  ft_print_str.c  ft_print_uint.c  ft_printf.c  ft_strchr.c  ft_strlen.c  ft_substr.c  init_struct.c  null_struct.c  print_sleva.c  print_sprava.c  printf.h
